October 27 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Items in shops or on the cathedral floor no longer spoil
	* Spoil level is now symbolized by Hex's fly effect
	* Halved all spoil rates
	* Fixed a bug that caused the pick up AI of limb-lacking monsters to crash
	* Corrected a bug in the new random item code that created numerous ghost items
	* Removed a fatal bug in the block code that resulted in a div by zero
	* Killed a minor bug in the bodypart attachment code that prevented attribute
	  bonuses from updating correctly
	* Added flame effect for holy bananas
	* Tweaked the shape of the jungle island a little

October 26 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Weapon prices are now correct
	* S&R:ed "omel" to "ommel"
	* New materials added: hardened leather, troll hide, nymph hair, ommel hair,
	  angel hair, phoenix feather, golden eagle feather, spider silk and kevlar
	* Added many new material choices for cloaks, belts, gauntlets and boots
	* Unarmed, kick and bite THVs decreased
	* Corrected a problem with lamps that generated names like "oil iron lamp"
	* Corrected a fatal bug in the spoil code
	* Intact and broken morning star pictures added to item.pcx by Kahvi
	* The old starting room moved to the tunnel
	* Size of Elpuri's cave decreased by three levels
	* Added scrolls of enchant weapon and armor as a reward to wolf room
	* Added random item option to script
	* Most items sold in shops and the library are now random

October 24 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Inelastic armor now decreases dexterity and/or agility

October 18 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The danger system now takes haste and slow into account
	* Monster no longer panic when they die
	* Weapon weights are now *much* more realistic
	* New weapons added: hammer, sickle, dagger and short sword
	* Names of the following weapons modified:
	  * curved two-handed sword -> two-handed scimitar
	  * poleaxe -> halberd
	  * spiked mace -> mace
	* Whips no longer break